--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
                 <div id="hero-content">
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
+                    <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
                     <div class="accent-button">
                         <a href="">Get Started</a>
                     </div>
                 </div>
                 <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
+            </section>
+            <section class="vertical-layout" id="more-about-xellanix">
+                <h2>More About Xellanix Community</h2>
+                <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br/>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br/>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
             </section>
         </main>
     </div>
