--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="header-section.css" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="nav-styles.css" />
-    <link rel="stylesheet" href="media-styles.css"
+    <link rel="stylesheet" href="media-styles.css"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2.47.0/tabler-icons.min.css">
     
