--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <link rel="stylesheet" href="main-frame.css" />
     <link rel="stylesheet" href="header-section.css" />
-    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="nav-styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="media-styles.css"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2.47.0/tabler-icons.min.css">
@@ -23,25 +23,26 @@
 </head>
 <body class="light-theme">
     <div class="body-wrapper">
+        <div id="header-stick-watcher" data-scroll-watcher></div>
         <header>
             <div class="icon-landscape">
                 <img src="assets/icon.svg" alt="Xellanix Icon">
                 <div>Xellanix</div>
             </div>
             <nav>
-                <div class="nav-item-wrapper active"><a href="">Home</a></div>
-                <div class="nav-item-wrapper"><a href="">Feature</a></div>
-                <div class="nav-item-wrapper"><a href="">About</a></div>
-                <div class="nav-item-wrapper"><a href="">Contact</a></div>
-                <div class="nav-item-wrapper"><a href="">Support</a></div>
+                <div class="nav-item-wrapper home-section-class active"><a href="#home-section">Home</a></div>
+                <div class="nav-item-wrapper features-section-class"><a href="#features-section">Feature</a></div>
+                <div class="nav-item-wrapper about-section-class"><a href="#about-section">About</a></div>
+                <div class="nav-item-wrapper contact-section-class"><a href="#contact-section">Contact</a></div>
+                <div class="nav-item-wrapper support-section-class"><a href="#support-section">Support</a></div>
             </nav>
-            <div class="hamburger-button">
-                <lottie-player id="hamburger-button-lottie" src="assets/hamburger.json" style="width: 24px; height: 24px;" disableShadowDOM></lottie-player>
+            <div class="hamburger-button" id="navigation-small-hamburger">
+                <lottie-player id="hamburger-button-lottie" src="assets/hamburger.json" style="width: 40px; height: 40px;" disableShadowDOM></lottie-player>
             </div>
         </header>
         
         <main>
-            <section class="horizontal-layout use-space-between">
+            <section class="horizontal-layout use-space-between" id="home-section">
                 <div id="hero-content">
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
@@ -52,13 +53,18 @@
                 </div>
                 <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
             </section>
+
             <section class="vertical-layout" id="more-about-xellanix">
                 <h2>More About Xellanix Community</h2>
                 <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br/>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br/>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
             </section>
         </main>
+
+        <div id="smoke-layer"></div>
     </div>
 
+    <script src="main-app.js"></script>
+    <script src="header-effects.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script>
         LottieInteractivity.create({
