--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xellanix Foundation</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/icon.svg">
+
     <link rel="stylesheet" href="main-frame.css" />
     <link rel="stylesheet" href="header-section.css" />
     <link rel="stylesheet" href="nav-styles.css" />
