--- a/index.html
+++ b/index.html
@@ -31,20 +31,14 @@
                 <img src="assets/icon.svg" alt="Xellanix Icon">
                 <div>Xellanix</div>
             </div>
-            <nav>
-                <div class="nav-item-wrapper home-section-class active"><a href="#home-section">Home</a></div>
-                <div class="nav-item-wrapper features-section-class"><a href="#features-section">Feature</a></div>
-                <div class="nav-item-wrapper about-section-class"><a href="#about-section">About</a></div>
-                <div class="nav-item-wrapper contact-section-class"><a href="#contact-section">Contact</a></div>
-                <div class="nav-item-wrapper support-section-class"><a href="#support-section">Support</a></div>
-            </nav>
+            <nav></nav>
             <div class="hamburger-button" id="navigation-small-hamburger">
                 <lottie-player id="hamburger-button-lottie" src="assets/hamburger.json" style="width: 40px; height: 40px;" disableShadowDOM></lottie-player>
             </div>
         </header>
         
         <main>
-            <section class="horizontal-layout use-space-between" id="home-section">
+            <section class="horizontal-layout use-space-between" id="home-section" data-insert-to-navbar-menu>
                 <div id="hero-content">
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
@@ -60,6 +54,7 @@
                 <h2>More About Xellanix Community</h2>
                 <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br/>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br/>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
             </section>
+            
         </main>
 
         <div id="smoke-layer"></div>
