--- a/index.html
+++ b/index.html
@@ -56,9 +56,96 @@
                 <h2>More About Xellanix Community</h2>
                 <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br/>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br/>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
             </section>
-            
-        </main>
+            <section class="horizontal-layout">
+                <div>
+                    <h2>Community Purposes</h2>
+                    <p>Our Vision is to provide convenience to everyone in working on their projects in specific programming languages for free. <br>As part of our vision, the Xellanix Community was formed with mission to offer relevant and user-friendly projects and libraries for free.</p>
+                </div>
 
+                <div>
+                    <h2>Our Goals</h2>
+                    <p>Maintain and enhance Xellanix projects and libraries through a publicly accessible source code system under the MIT License. <br>Provide researchers and programmers, both individuals and teams, access to complete, free and open source projects and libraries</p>
+                </div>
+
+            </section>
+
+            <section>
+            <div>
+                <h2>Explore All the Works You've Never Imagined Before</h2> 
+                <h3>Mastertools</h3>
+                <p>An application with a set of unique and creative features, made with intention and love.</p>
+                <h3>Imagemerger</h3>
+                <p>Merge multiple images from files or clipboard, including screenshots, into a new file.</p>
+                <h3>Xellanix-lib</h3>
+                <p>A C++ library for regular use, made by xellanix (currently in under development).</p>
+            </div>
+         </section>
+
+            <section class="horizontal-layout">
+                <div>
+                    <p>Download</p> <p>Download</p> <p>Download</p>
+                </div>
+            </section>
+
+            <section>
+                 <h2>You Are the One Who Builds This Community</h2>
+                 <p>“We build this community with you, as by doing so,
+                    there is great hope for ongoing growth.”</p>
+                         <div>
+                            <img src="">
+                            <div>
+                            <h4>Donny Andrian</h4>
+                            <p>President of Xellanix</p>
+                            </div> 
+                         </div>
+                          <div>
+                            <img src="">
+                            <div>
+                            <h4>Jenie Josphin</h4>
+                            <p>Creative Director</p>
+                            </div>
+                         </div>
+                         <div>
+                            <img src="">
+                            <div>
+                            <h4>Bernardo Ng</h4>
+                            <p>Full Stack Developer</p>
+                            </div>
+                    </div>
+            </section>
+<section>
+    <div>
+        <h1>Xellanix</h1>
+        <p>Faster and easier than ever.</p>
+    </div>
+
+    <div>
+        <h4>Link</h4> 
+        <p>Home</p>
+        <p>Products</p>
+        <p>about</p>
+        <p>supports</p>
+    </div>
+
+    <div>
+        <h4>Products</h4>
+        <p>Home</p>
+        <p>Features</p>
+        <p>About</p>
+        <p>Contact</p>
+        <p>Supports</p>
+    </div>
+
+    <div>
+        <h4>Contact</h4>
+        <p>Home</p>
+        <p>Features</p>
+        <p>About</p>
+        <p>Contact</p>
+        <p>Supports</p>
+    </div>
+</section>
+        </main>
         <div id="smoke-layer"></div>
     </div>
 
