Update style and script

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
     <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
 
-    <link rel="stylesheet" href="main-frame.css" />
-    <link rel="stylesheet" href="header-section.css" />
-    <link rel="stylesheet" href="nav-styles.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="media-styles.css"/>
+    <link rel="stylesheet" href="main-frame.css" >
+    <link rel="stylesheet" href="header-section.css" >
+    <link rel="stylesheet" href="nav-styles.css" >
+    <link rel="stylesheet" href="flex-align.css">
+    <link rel="stylesheet" href="text-align.css">
+    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="media-styles.css">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@2.47.0/tabler-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@3.1.0/dist/tabler-icons.min.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
