--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         <div id="header-stick-watcher" data-scroll-watcher></div>
         <header>
             <div class="icon-landscape">
-                <img src="assets/icon.svg" alt="Xellanix Icon">
-                <div>Xellanix</div>
+                <a href="" tabindex="-1">
+                    <img src="assets/icon.svg" alt="Xellanix Icon">
+                    <div>Xellanix</div>
+                </a>
             </div>
             <nav></nav>
             <div class="hamburger-button" id="navigation-small-hamburger">
@@ -54,21 +56,21 @@
                 <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
             </section>
 
-            <section class="vertical-layout" id="more-about-xellanix">
-                <h2>More About Xellanix Community</h2>
-                <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br/>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br/>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
-            </section>
-            <section class="horizontal-layout">
-                <div>
-                    <h2>Community Purposes</h2>
-                    <p>Our Vision is to provide convenience to everyone in working on their projects in specific programming languages for free. <br>As part of our vision, the Xellanix Community was formed with mission to offer relevant and user-friendly projects and libraries for free.</p>
+            <section class="horizontal-layout" id="more-about-xellanix" data-affect-to-navbar-menu="home-section">
+                <div class="vertical-layout flex-fill text-align-justify" style="flex: 4 1 0;">
+                    <h2>About Xellanix Community</h2>
+                    <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
                 </div>
-
-                <div>
-                    <h2>Our Goals</h2>
-                    <p>Maintain and enhance Xellanix projects and libraries through a publicly accessible source code system under the MIT License. <br>Provide researchers and programmers, both individuals and teams, access to complete, free and open source projects and libraries</p>
+                <div class="vertical-layout text-align-justify flex-fill" style="flex: 6 1 0;">
+                    <div class="vertical-layout flex-fill">
+                        <h2>Community Purposes</h2>
+                        <p>Our Vision is to provide convenience to everyone in working on their projects in specific programming languages for free.<br>As part of our vision, the Xellanix Community was formed with mission to offer relevant and user-friendly projects and libraries for free.</p>
+                    </div>
+                    <div class="vertical-layout flex-fill" style="margin-top: var(--section-gap-vertical);">
+                        <h2>Our Goals</h2>
+                        <p>Maintain and enhance Xellanix projects and libraries through a publicly accessible source code system under the MIT License.<br>Provide researchers and programmers, both individuals and teams, access to complete, free and open source projects and libraries</p>
+                    </div>
                 </div>
-
             </section>
 
             <section>
