updated product item

--- a/index.html
+++ b/index.html
@@ -73,24 +73,34 @@
                 </div>
             </section>
 
-            <section>
-            <div>
-                <h2>Explore All the Works You've Never Imagined Before</h2> 
-                <h3>Mastertools</h3>
-                <p>An application with a set of unique and creative features, made with intention and love.</p>
-                <h3>Imagemerger</h3>
-                <p>Merge multiple images from files or clipboard, including screenshots, into a new file.</p>
-                <h3>Xellanix-lib</h3>
-                <p>A C++ library for regular use, made by xellanix (currently in under development).</p>
-            </div>
-         </section>
-
-            <section class="horizontal-layout">
-                <div>
-                    <p>Download</p> <p>Download</p> <p>Download</p>
+            <section class="vertical-layout text-align-center horizontal-layout-center-align" id="products-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="products-section">
+                <img src="assets/bg-custom-shape-1.svg" alt="">
+                <h2>Explore All the Works You've Never Imagined Before</h2>
+                <div class="horizontal-layout vertical-layout-center-align">
+                    <div class="product-item">
+                        <h3>MasterTools</h3>
+                        <p>An application with a set of unique and creative features, made with intention and love.</p>
+                        <div class="accent-button">
+                            <a href="https://github.com/xellanix/mastertools" target="_blank" tabindex="-1">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <h3>Image Merger</h3>
+                        <p>Merge multiple images from files or clipboard, including screenshots, into a new file.</p>
+                        <div class="accent-button">
+                            <a href="https://github.com/xellanix/imagemerger" target="_blank" tabindex="-1">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <h3>Xellanix Library</h3>
+                        <p>A C++ library for regular use, made by xellanix (currently in under development).</p>
+                        <div class="accent-button">
+                            <a href="https://github.com/xellanix/xellanix-lib" target="_blank" tabindex="-1">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </section>
-
+           
             <section>
                  <h2>You Are the One Who Builds This Community</h2>
                  <p>“We build this community with you, as by doing so,
