--- a/index.html
+++ b/index.html
@@ -101,64 +101,74 @@
                 </div>
             </section>
            
-            <section>
-                 <h2>You Are the One Who Builds This Community</h2>
-                 <p>“We build this community with you, as by doing so,
-                    there is great hope for ongoing growth.”</p>
-                         <div>
-                            <img src="">
-                            <div>
-                            <h4>Donny Andrian</h4>
+            <section class="vertical-layout text-align-center horizontal-layout-center-align" id="team-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="team-section">
+                <h2>You Are the One Who Builds This Community</h2>
+                <p>“We build this community with you, as by doing so,<br>there is great hope for ongoing growth.”</p>
+                <div class="horizontal-layout vertical-layout-center-align">
+                    <div class="team-member-item">
+                        <img src="assets/member/donny.jpg" alt="Donny Andrian Picture">
+                        <div class="vertical-layout vertical-layout-center-align">
+                            <h3>Donny Andrian</h3>
                             <p>President of Xellanix</p>
-                            </div> 
-                         </div>
-                          <div>
-                            <img src="">
-                            <div>
-                            <h4>Jenie Josphin</h4>
-                            <p>Creative Director</p>
-                            </div>
-                         </div>
-                         <div>
-                            <img src="">
-                            <div>
-                            <h4>Bernardo Ng</h4>
-                            <p>Full Stack Developer</p>
-                            </div>
+                        </div>
                     </div>
+                    <div class="team-member-item">
+                        <img src="assets/member/donny.jpg" alt="Jenie Josphin Picture">
+                        <div class="vertical-layout vertical-layout-center-align">
+                            <h3>Jenie Josphin</h3>
+                            <p>Creative Director</p>
+                        </div>
+                    </div>
+                    <div class="team-member-item">
+                        <img src="assets/member/bernardo.jpg" alt="Bernardo Ng Picture">
+                        <div class="vertical-layout vertical-layout-center-align">
+                            <h3>Bernardo Ng</h3>
+                            <p>Full Stack Developer</p>
+                        </div>
+                    </div>
+                </div>
             </section>
-<section>
-    <div>
-        <h1>Xellanix</h1>
-        <p>Faster and easier than ever.</p>
-    </div>
 
-    <div>
-        <h4>Link</h4> 
-        <p>Home</p>
-        <p>Products</p>
-        <p>about</p>
-        <p>supports</p>
-    </div>
-
-    <div>
-        <h4>Products</h4>
-        <p>Home</p>
-        <p>Features</p>
-        <p>About</p>
-        <p>Contact</p>
-        <p>Supports</p>
-    </div>
-
-    <div>
-        <h4>Contact</h4>
-        <p>Home</p>
-        <p>Features</p>
-        <p>About</p>
-        <p>Contact</p>
-        <p>Supports</p>
-    </div>
-</section>
+            <section class="horizontal-layout use-space-between" id="service-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="service-section">
+                <div class="vertical-layout" style="gap: calc(var(--section-gap-vertical) * 0.75);">
+                    <h2 style="color: var(--accent-color);">Xellanix</h2>
+                    <h4 style="font-weight: 500;">Faster and easier than ever.</h4>
+                    <div class="horizontal-layout social-media-links">
+                        <a href="https://github.com/xellanix" target="_blank"><svg  xmlns="http://www.w3.org/2000/svg"  width="32"  height="32"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.75"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-github"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg></a>
+                    </div>
+                </div>
+                <div class="horizontal-layout gap-15">
+                    <div class="vertical-layout">
+                        <h4>Link</h4>
+                        <a href="#home-section" target="_blank">Home</a>
+                        <a href="#products-section" target="_blank">Products</a>
+                        <a href="#team-section" target="_blank">Team</a>
+                        <a href="#service-section" target="_blank">Services</a>
+                    </div>
+                    <div class="vertical-layout">
+                        <h4>Product</h4>
+                        <a href="https://github.com/xellanix/mastertools" target="_blank">MasterTools</a>
+                        <a href="https://github.com/xellanix/imagemerger" target="_blank">Image Merger</a>
+                        <a href="https://github.com/xellanix/xellanix-lib" target="_blank">Xellanix Library</a>
+                    </div>
+                    <div class="vertical-layout">
+                        <h4>Contact</h4>
+                        <a href="mailto:donnylabsofficial@gmail.com" target="_blank">donnylabsofficial@gmail.com</a>
+                        <div style="font-size: var(--navigation-text-size);">
+                            Kubu Raya, Kalimantan Barat, Indonesia
+                        </div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.8159577532433!2d109.36706317495248!3d-0.06235269993703156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e1d59cfb8c87e51%3A0x26f30b0e019e9996!2sService%20Mesin%20Jahit%20Achiung!5e0!3m2!1sen!2sid!4v1712993547014!5m2!1sen!2sid"
+                            width="300"
+                            height="175"
+                            style="border: 0; border-radius: 8px; box-shadow: 0px 4px 48px 0px rgba(0, 0, 0, .1);"
+                            allowFullScreen=""
+                            loading="lazy"
+                            referrerPolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                    </div>
+                </div>
+            </section>
         </main>
         <div id="smoke-layer"></div>
     </div>
