Finishing main page

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         </header>
         
         <main>
-            <section class="horizontal-layout use-space-between" id="home-section" data-insert-to-navbar-menu>
+            <section class="horizontal-layout use-space-between" id="home-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="home-section">
                 <div id="hero-content">
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
                     <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
                     <div class="accent-button">
-                        <a href="">Get Started</a>
+                        <a href="#products-section" tabindex="-1">Get Started</a>
                     </div>
                 </div>
                 <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </section>
-           
+
             <section class="vertical-layout text-align-center horizontal-layout-center-align" id="team-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="team-section">
                 <h2>You Are the One Who Builds This Community</h2>
                 <p>“We build this community with you, as by doing so,<br>there is great hope for ongoing growth.”</p>
@@ -170,6 +170,7 @@
                 </div>
             </section>
         </main>
+
         <div id="smoke-layer"></div>
     </div>
 
