--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="team-member-item">
-                        <img src="assets/member/donny.jpg" alt="Jenie Josphin Picture">
+                        <img src="assets/member/jenie.jpg" alt="Jenie Josphin Picture">
                         <div class="vertical-layout vertical-layout-center-align">
                             <h3>Jenie Josphin</h3>
                             <p>Creative Director</p>
