Organize files by type

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <link rel="icon" type="image/svg+xml" href="assets/icon.svg">
 
-    <link rel="stylesheet" href="main-frame.css" >
-    <link rel="stylesheet" href="header-section.css" >
-    <link rel="stylesheet" href="nav-styles.css" >
-    <link rel="stylesheet" href="flex-align.css">
-    <link rel="stylesheet" href="text-align.css">
-    <link rel="stylesheet" href="styles.css" >
-    <link rel="stylesheet" href="media-styles.css">
+    <link rel="stylesheet" href="styles/main-frame.css" >
+    <link rel="stylesheet" href="styles/header-section.css" >
+    <link rel="stylesheet" href="styles/nav-styles.css" >
+    <link rel="stylesheet" href="styles/flex-align.css">
+    <link rel="stylesheet" href="styles/text-align.css">
+    <link rel="stylesheet" href="styles/styles.css" >
+    <link rel="stylesheet" href="styles/media-styles.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@3.1.0/dist/tabler-icons.min.css">
     
@@ -174,8 +174,8 @@
         <div id="smoke-layer"></div>
     </div>
 
-    <script src="main-app.js"></script>
-    <script src="header-effects.js"></script>
+    <script src="scripts/main-app.js"></script>
+    <script src="scripts/header-effects.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script>
         LottieInteractivity.create({
