--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
                     <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
-                    <div class="accent-button">
+                    <div class="accent-button" id="get-started-button">
                         <a href="#products-section" tabindex="-1">Get Started</a>
                     </div>
                 </div>
