Updated style and class name

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
                     <h2>About Xellanix Community</h2>
                     <p>Xellanix Community (2022) is an independent public benefit community with the purpose to provide a complete, free and open source projects and libraries.<br>We are also established to have a positive impact on many people, especially programmers, in utilizing a programming language for their projects.<br>Xellanix continues to strive for relevance in its active projects and libraries, aiming to provide ongoing convenient and positive feedback regarding our development.</p>
                 </div>
-                <div class="vertical-layout text-align-justify flex-fill" style="flex: 6 1 0;">
+                <div class="vertical-layout text-align-justify flex-fill vertical-gap2x" style="flex: 6 1 0;">
                     <div class="vertical-layout flex-fill">
                         <h2>Community Purposes</h2>
                         <p>Our Vision is to provide convenience to everyone in working on their projects in specific programming languages for free.<br>As part of our vision, the Xellanix Community was formed with mission to offer relevant and user-friendly projects and libraries for free.</p>
                     </div>
-                    <div class="vertical-layout flex-fill" style="margin-top: var(--section-gap-vertical);">
+                    <div class="vertical-layout flex-fill">
                         <h2>Our Goals</h2>
                         <p>Maintain and enhance Xellanix projects and libraries through a publicly accessible source code system under the MIT License.<br>Provide researchers and programmers, both individuals and teams, access to complete, free and open source projects and libraries</p>
                     </div>
                 </div>
             </section>
 
-            <section class="vertical-layout text-align-center horizontal-layout-center-align" id="products-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="products-section">
+            <section class="vertical-layout text-align-center flex-align-center" id="products-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="products-section">
                 <img src="assets/bg-custom-shape-1.svg" alt="">
                 <h2>Explore All the Works You've Never Imagined Before</h2>
-                <div class="horizontal-layout vertical-layout-center-align">
+                <div class="horizontal-container-layout flex-align-center">
                     <div class="product-item">
                         <h3>MasterTools</h3>
                         <p>An application with a set of unique and creative features, made with intention and love.</p>
@@ -100,27 +100,27 @@
                 </div>
             </section>
 
-            <section class="vertical-layout text-align-center horizontal-layout-center-align" id="team-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="team-section">
+            <section class="vertical-layout text-align-center flex-align-center" id="team-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="team-section">
                 <h2>You Are the One Who Builds This Community</h2>
                 <p>“We build this community with you, as by doing so,<br>there is great hope for ongoing growth.”</p>
-                <div class="horizontal-layout vertical-layout-center-align">
+                <div class="horizontal-container-layout flex-align-center">
                     <div class="team-member-item">
                         <img src="assets/member/donny.jpg" alt="Donny Andrian Picture">
-                        <div class="vertical-layout vertical-layout-center-align">
+                        <div class="vertical-layout">
                             <h3>Donny Andrian</h3>
                             <p>President of Xellanix</p>
                         </div>
                     </div>
                     <div class="team-member-item">
                         <img src="assets/member/jenie.jpg" alt="Jenie Josphin Picture">
-                        <div class="vertical-layout vertical-layout-center-align">
+                        <div class="vertical-layout">
                             <h3>Jenie Josphin</h3>
                             <p>Creative Director</p>
                         </div>
                     </div>
                     <div class="team-member-item">
                         <img src="assets/member/bernardo.jpg" alt="Bernardo Ng Picture">
-                        <div class="vertical-layout vertical-layout-center-align">
+                        <div class="vertical-layout">
                             <h3>Bernardo Ng</h3>
                             <p>Full Stack Developer</p>
                         </div>
@@ -170,7 +170,8 @@
             </section>
         </main>
 
-        <div id="smoke-layer"></div>
+        <div id="smoke-layer" class="vertical-layout flex-align-middle flex-align-center">
+        </div>
     </div>
 
     <script src="scripts/main-app.js"></script>
