--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/nav-styles.css" >
     <link rel="stylesheet" href="styles/flex-align.css">
     <link rel="stylesheet" href="styles/text-align.css">
+    <link rel="stylesheet" href="styles/button.css">
     <link rel="stylesheet" href="styles/styles.css" >
     <link rel="stylesheet" href="styles/media-styles.css">
 
@@ -48,7 +49,7 @@
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
                     <h6>Build your programming projects faster and easier than ever.</h6>
                     <img src="assets/home-1.png" alt="Fast, Simple, and Neat Coding Package Illustration">
-                    <div class="accent-button" id="get-started-button">
+                    <div class="button accent" id="get-started-button">
                         <a href="#products-section" tabindex="-1">Get Started</a>
                     </div>
                 </div>
@@ -79,21 +80,21 @@
                     <div class="product-item">
                         <h3>MasterTools</h3>
                         <p>An application with a set of unique and creative features, made with intention and love.</p>
-                        <div class="accent-button">
+                        <div class="button accent">
                             <a href="https://github.com/xellanix/mastertools" target="_blank" tabindex="-1">Learn More</a>
                         </div>
                     </div>
                     <div class="product-item">
                         <h3>Image Merger</h3>
                         <p>Merge multiple images from files or clipboard, including screenshots, into a new file.</p>
-                        <div class="accent-button">
+                        <div class="button accent">
                             <a href="https://github.com/xellanix/imagemerger" target="_blank" tabindex="-1">Learn More</a>
                         </div>
                     </div>
                     <div class="product-item">
                         <h3>Xellanix Library</h3>
                         <p>A C++ library for regular use, made by xellanix (currently in under development).</p>
-                        <div class="accent-button">
+                        <div class="button accent">
                             <a href="https://github.com/xellanix/xellanix-lib" target="_blank" tabindex="-1">Learn More</a>
                         </div>
                     </div>
