30/5/24 - Give styles to the new item popup

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/nav-styles.css" >
     <link rel="stylesheet" href="styles/flex-align.css">
     <link rel="stylesheet" href="styles/text-align.css">
+    <link rel="stylesheet" href="styles/popup.css">
     <link rel="stylesheet" href="styles/button.css">
     <link rel="stylesheet" href="styles/styles.css" >
     <link rel="stylesheet" href="styles/media-styles.css">
