28/5/24 - Make the add new button item

--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                             <a href="https://github.com/xellanix/xellanix-lib" target="_blank" tabindex="-1">Learn More</a>
                         </div>
                     </div>
-                </div>
+                <div id="create-new-product-item-button" class="product-item special-item">
+                    <h3>Add a New Item</h3>
+                    <img src="assets/product-new-item-icon.svg" alt="New Product Item Icon">
+                </div>
             </section>
 
             <section class="vertical-layout text-align-center flex-align-center" id="team-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="team-section">
@@ -127,6 +130,10 @@
                             <h3>Bernardo Ng</h3>
                             <p>Full Stack Developer</p>
                         </div>
+                    </div>
+                    <div id="create-new-member-item-button" class="product-item special-item">
+                        <h3>Add a New Item</h3>
+                        <img src="assets/product-new-item-icon.svg" alt="New Product Item Icon">
                     </div>
                 </div>
             </section>
