--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/flex-align.css">
     <link rel="stylesheet" href="styles/text-align.css">
     <link rel="stylesheet" href="styles/popup.css">
+    <link rel="stylesheet" href="styles/info-box.css">
     <link rel="stylesheet" href="styles/button.css">
     <link rel="stylesheet" href="styles/styles.css" >
     <link rel="stylesheet" href="styles/media-styles.css">
