Make the authentication popup - #1

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
                 </a>
             </div>
             <nav></nav>
+            <button class="button accent" type="button" id="openPopup">Sign In</button>
             <div class="hamburger-button" id="navigation-small-hamburger">
                 <lottie-player id="hamburger-button-lottie" src="assets/hamburger.json" style="width: 40px; height: 40px;" disableShadowDOM></lottie-player>
             </div>
         </header>
         
         <main>
+            
             <section class="horizontal-layout use-space-between" id="home-section" data-insert-to-navbar-menu data-affect-to-navbar-menu="home-section">
                 <div id="hero-content">
                     <h1>Provide <span style="color: var(--accent-color);">Speed, Simplicity, and Neatness</span> in Your Coding Experience</h1>
@@ -201,6 +203,7 @@
     <script src="scripts/loader.js"></script>
     <script src="scripts/popups/product.js"></script>
     <script src="scripts/popups/member.js"></script>
+    <script src="scripts/popups/authentication.js"></script>
     <script src="scripts/popup.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script>
