--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </a>
             </div>
             <nav></nav>
-            <button class="button accent" type="button" id="openPopup">Sign In</button>
+            <button class="button accent" type="button" id="reqAuthBtn">Sign in</button>
             <div class="hamburger-button" id="navigation-small-hamburger">
                 <lottie-player id="hamburger-button-lottie" src="assets/hamburger.json" style="width: 40px; height: 40px;" disableShadowDOM></lottie-player>
             </div>
