--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     </div>
 
     <script src="scripts/main-app.js"></script>
+    <script src="scripts/builder.js"></script>
     <script src="scripts/header-effects.js"></script>
     <script src="scripts/infobox.js"></script>
     <script src="scripts/input-field.js"></script>
